compiler/test-data/parser/expressions/errors/unclosed_paren.frel
module expressions.errors.unclosed_paren

blueprint Bad {
    x : i32 = (1 + 2
}
